# NAOMI

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  values_example.yaml
MADRL_examples/: README.md  highway_client.py  highway_server.py  multi_agent_highway.py  requirements.txt  values_madrl_example.yaml
Ray-conf/: ingress-kube.yaml  ray-serve.yaml
Scripts/: ray-deploy.sh
conf/: zenml_stack.yaml
conf/kube_conf/: ingress-kube.yaml
docker/: Dockerfile  requirements.txt
docker_build/: Dockerfile
docker_build/model_deployment/: Dockerfile  api-endpoint.py  requirements.txt
docker_build/ray_image/: Dockerfile  requirements.txt
flyte-projects/: README.md
flyte-projects/mnist/: deploy_model.py  docker_build.sh  requirements.txt
flyte-projects/qoe-prediction/: create_features.py  train_ray.py
helm_charts/NAOMI/: Chart.yaml  values.yaml
helm_charts/SEMR/: Chart.yaml  values.yaml
helm_charts/SEMR_inference/: Chart.yaml  values-overrides-nvg.yaml  values-overrides-spectrum.yaml  values.yaml
helper_scripts/: NAOMI-in-kind.sh  NAOMI-on-k3s.sh  env-prepare.sh  rasp-install.sh  system-deploy.sh  system-install.sh  uninstall.sh
helper_scripts/microk8s_ansible/: README.md  ansible.cfg  health_check.yml  install_microk8s.yml  inventory.yml  remove_microk8s.yml
scripts/: env-prepare.sh  rasp-install.sh  system-deploy.sh  system-install.sh  uninstall.sh  vm-install.sh
workflow_examples/: .gitignore  Dockerfile  README.md  docker_build.sh  requirements.txt
zenml-projects/: cleanup.py  script.py
(+122 files in other folders)
